# alpr-system

./: README.md  app.py  pyproject.toml  requirements.txt
src/alpr/: paths.py  pipeline.py
src/alpr/deepseek_ocr/: inference.py
src/alpr/detector/: config.py  dataset.py  helper_utils.py  inference.py  net.py  train.py
