[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alpr-system"
version = "0.1.0"
description = "Automatic license plate recognition system"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "accelerate",
    "safetensors",
    "Pillow",
    "opencv-python",
    "tqdm",
    "torchmetrics",
    "matplotlib",
    "numpy",
    "addict",
    "einops",
    "easydict",
    "pycocotools",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["alpr*"]
