[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alpr-system"
version = "0.1.0"
description = "Vietnamese automatic license plate recognition using Faster R-CNN or YOLO and DeepSeek-OCR"
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = ["alpr", "computer-vision", "license-plate", "ocr", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch~=2.13.0",
    "torchvision~=0.28.0",
    "transformers==4.57.6",
    "accelerate~=1.14.0",
    "safetensors>=0.6,<1",
    "Pillow~=12.3.0",
    "opencv-python~=5.0.0.93",
    "numpy~=2.5.1",
    "PyQt5==5.15.11",
    "ultralytics~=8.4.92",
    "tqdm~=4.68.4",
    "torchmetrics~=1.9.0",
    "matplotlib~=3.11.0",
    "pycocotools>=2.0.10,<3",
    "addict~=2.4.0",
    "einops~=0.8.2",
    "easydict==1.13",
]

[project.scripts]
alpr-predict = "alpr.pipeline:main"
alpr-detect = "alpr.detector.inference:main"
alpr-ocr = "alpr.deepseek_ocr.inference:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["alpr*"]
